trunk/Archive2/99/3316a7e7d0b05e/main.cpp
#include <random>

struct A {
    explicit A(int) { }
};

struct B : public virtual A {
    using A::A;
};

int main(int argc, char** argv) {
    B b(3);
    
    return 0;
}